| Summary: | ASTERISK-26822: pjsip/cli_commands: pjsip show channelstats shows wrong codec | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2017-02-27 10:45:27.000-0600 | Date Closed: | 2017-03-10 14:46:13.000-0600 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.14.0 14.3.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | No matter what codec is used on a channel, _pjsip show channelstats_ always shows "ulaw" as the codec. For instance if the endpoint is configured and negotiates opus the following is the output after running the command:
{noformat} 162-00000000 00:00:06 ulaw 292 0 0 0.000 292 0 0 0.001 0.000 {noformat} After looking in /channels/pjsip/cli_commands it appears the payload number is hard coded to "0". | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-03-10 14:46:14.656-0600 Change 5120 merged by Joshua Colp: pjsip/cli_commands: pjsip show channelstats shows wrong codec [https://gerrit.asterisk.org/5120|https://gerrit.asterisk.org/5120] By: Friendly Automation (friendly-automation) 2017-03-10 16:03:15.220-0600 Change 5121 merged by Joshua Colp: pjsip/cli_commands: pjsip show channelstats shows wrong codec [https://gerrit.asterisk.org/5121|https://gerrit.asterisk.org/5121] By: Friendly Automation (friendly-automation) 2017-03-10 16:11:00.561-0600 Change 5122 merged by Joshua Colp: pjsip/cli_commands: pjsip show channelstats shows wrong codec [https://gerrit.asterisk.org/5122|https://gerrit.asterisk.org/5122] | ||