pjsip/cli_commands: pjsip show channelstats shows wrong codec

* cli_commands.c Fixed CLI output

ASTERISK-26822 #close

Change-Id: I3889ef6a8f6738fc312fab42db5efacd6e452b01